--- a/style.css
+++ b/style.css
@@ -12,18 +12,21 @@ body {
 .container {
   text-align: center;
 }
+
 header {
   background-color: #eee;
-  font-family: 'Asap', sans-serif;
+  color: #25282e;
   text-align: center;
-  padding: 1.1em;
+  padding: 1.2em;
 }
+
 header h1 {
   color: #24272e;
 }
 
 .content {
   text-align: center;
+  color: #eee;
 }
 
 .score-board {
@@ -36,6 +39,7 @@ header h1 {
   border-radius: .2em;
   position: relative;
 }
+
 .badge {
   background-color: #e2584D;
   color: #fff;
@@ -43,13 +47,58 @@ header h1 {
   padding: 5px 14px;
   border-radius: 3px;
 }
+
 #user-label, #comp-label {
   position: absolute;
   top: 30%;
 }
+
 #user-label {
   left: -30px;
 }
+
 #comp-label {
   right: -30px;
+}
+
+.result {
+  font-size: 1.9rem;
+  color: #ddd;
+  font-weight: 800;
+  padding: .3rem;
+}
+
+.choices {
+  display: flex;
+  justify-content: center;
+  margin: 1rem auto;
+}
+
+.choice {
+  font-size: 2.5rem;
+  color: #b59d52;
+  border: 4px solid #bbb;
+  border-radius: 50%;
+  margin: 1rem;
+  padding: .3rem;
+  height: 2em;
+  width: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+
+.choice:hover {
+  border-color: #fff;
+  font-size: 2.8rem;
+  padding: .2rem;
+  margin: .7rem;
+  color: #ffe867;
+}
+
+.action-msg {
+  font-weight: bold;
+  font-size: 1.3rem;
 }
