--- a/style.css
+++ b/style.css
@@ -118,3 +118,22 @@ header h1 {
   box-shadow: 0 0 10px 0 #333;
 }
 
+footer {
+  background-color: #1f2227;
+  color: #ccc;
+  text-align: center;
+  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  font-family: monospace;
+}
+
+footer a {
+  text-decoration: none;
+  color: #ccc !important;
+}
+footer a:hover {
+  text-decoration: underline;
+  color: #fff !important;
+}
